<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.notekeeper.NoteActivity">
    <item android:title="@android:string/cancel" android:orderInCategory="100" android:id="@+id/action_cancel"
          app:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_revert"/>
    <item android:title="@string/next" android:id="@+id/action_next" android:icon="@android:drawable/ic_media_next"
          app:showAsAction="ifRoom" android:orderInCategory="101"/>
    <item android:id="@+id/action_send_email"
          android:title="@string/send_mail"
          android:orderInCategory="102"
          app:showAsAction="never"/>
    <item android:id="@+id/action_set_reminder"
          android:title="@string/set_reminder"
          android:orderInCategory="103"
          app:showAsAction="never"/>
</menu>
